@@ -26,6 +26,7 @@ export(rpng.off)
 export(s2c)
 export(server)
 export(showlog)
+export(shutdown)
 import(assertthat)
 importFrom(getPass,getPass)
 importFrom(grDevices,as.raster)
